Prepare Java 21 compilation